--- a/src/styles/lp.scss
+++ b/src/styles/lp.scss
@@ -10,20 +10,7 @@
       rgba(129, 229, 187, 0) 75%,
       #e6e6e6 100%
     ),
-     linear-gradient(180deg, #1ce48f 0%, #e6e6e6 100%);
-
-  h1 {
-    font-style: normal;
-    font-weight: 600;
-    font-size: 5em;
-    text-align: center;
-
-    background: linear-gradient(90deg, #1ce48f 0%, #0f7e4f 100%);
-    webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
-    background-clip: text;
-    text-fill-color: transparent;
-  }
+    linear-gradient(180deg, #1ce48f 0%, #e6e6e6 100%);
   p {
     font-size: 1.5em;
     font-style: normal;
@@ -39,10 +26,14 @@
     align-items: center;
     height: 100%;
     flex-direction: column;
+    width: 80%;
   }
   .image {
     width: 50%;
     height: 50%;
+  }
+  .logo {
+    width: 50%;
   }
 }
 .Faixa-2 {
@@ -84,13 +75,36 @@
     border-radius: 2em;
     cursor: pointer;
     transition: all 0.3s ease-in-out;
-    &:hover{
-        background: rgba(28, 228, 143, 0.25);
-        border: 2px solid #1ce48f;
-        transform: scale(1.05);
+    &:hover {
+      background: rgba(28, 228, 143, 0.25);
+      border: 2px solid #1ce48f;
+      transform: scale(1.05);
     }
   }
 }
-.mySwiper{
-    
+.Faixa-3 {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  align-items: center;
+  align-content: flex-start;
+  padding: 5%;
+  width: 100%;
+  height: auto;
+  background: linear-gradient(180deg, #e6e6e6 0%, #ffffff 100%);
+  .cards {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    width: 100%;
+    height: auto;
+    gap: 5em 10%;
+  }
+}
+.pic3{
+  width: 100%;
+  height: 100%;
+  object-fit: cover;  
 }
