--- a/src/components/LP/carousel/Carousel.module.scss
+++ b/src/components/LP/carousel/Carousel.module.scss
@@ -1,23 +1,40 @@
 .container {
-  width: 100%;
-  padding: 20px 0;
+  margin-top: 2em;
+  width: 50vw;
+  position: relative;
+  .fade-left,
+  .fade-right {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    width: 60px; // Ajuste o tamanho do blur lateral
+    z-index: 10;
+    pointer-events: none; // Não bloqueia cliques
+  }
 
-  .swiper {
-    width: 100%;
-    padding-bottom: 40px;
+  .fade-left {
+    left: 0;
+    background: linear-gradient(to right, #e6e6e6, rgba(255, 255, 255, 0));
+  }
 
-    .swiper-slide {
-      background: #fff;
-      border-radius: 20px;
-      padding: 20px;
-      box-shadow: 0 4px 10px rgba(0, 0, 0, 0.05);
+  .fade-right {
+    right: 0;
+    background: linear-gradient(to left, #e6e6e6, rgba(255, 255, 255, 0));
+  }
+  .card {
+    background: white;
+    border-radius: 20px;
+    padding: 20px;
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.05);
+    display: flex;
+    align-items: center;
+    text-align: start;
+    div {
       display: flex;
       flex-direction: column;
-      align-items: center;
-      transition: all 0.3s ease;
-
+      justify-content: start;
+      text-align: start;
       img {
-        width: 120px;
         height: 120px;
         object-fit: contain;
       }
@@ -26,47 +43,22 @@
         margin-top: 10px;
         font-size: 18px;
         font-weight: 600;
-        color: #333;
       }
 
       p {
         margin-top: 6px;
         font-size: 14px;
         color: #666;
-        text-align: center;
       }
 
       button {
-        margin-top: 12px;
-        padding: 8px 16px;
-        background-color: #000;
-        color: white;
-        border: none;
-        border-radius: 8px;
+        padding: 0.5em 1em;
+        margin-top: 1em;
+        width: 70%;
+        background: rgba(204, 204, 204, 0.25);
+        border: 1px solid #cccccc;
+        border-radius: .5em;
         cursor: pointer;
-        transition: background-color 0.2s ease;
-
-        &:hover {
-          background-color: #333;
-        }
-      }
-    }
-
-    .swiper-slide-active {
-      transform: scale(1.05);
-      box-shadow: 0 6px 20px rgba(0, 0, 0, 0.1);
-    }
-
-    .swiper-pagination {
-      bottom: 0 !important;
-
-      .swiper-pagination-bullet {
-        background-color: #ccc;
-        opacity: 1;
-      }
-
-      .swiper-pagination-bullet-active {
-        background-color: #000;
       }
     }
   }
