--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -6,7 +6,7 @@
 * {
   margin: 0;
   padding: 0;
-  font-family: "SF Pro Rounded";
+  font-family: "Inter";
 }
 
 /* Define altura mínima e largura total */
